<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.note.NoteFragment">

    <EditText
        android:id="@+id/noteNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/note_title_hint"
        android:inputType="textCapSentences"
        android:textAppearance="?attr/textAppearanceHeadline5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/noteContentEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/note_content_hint"
        android:inputType="textMultiLine|textCapSentences"
        android:gravity="top"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/noteNameEditText"
        app:layout_constraintBottom_toTopOf="@id/saveNoteButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/saveNoteButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save_note_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
