<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.todonote.TodoNoteFragment">

    <EditText
        android:id="@+id/todoNoteNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/todo_list_title_hint"
        android:inputType="textCapSentences"
        android:textAppearance="?attr/textAppearanceHeadline5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/saveTodoNoteButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        android:layout_marginEnd="8dp"/>

    <Button
        android:id="@+id/saveTodoNoteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_list_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/todoNoteNameEditText"
        app:layout_constraintHorizontal_bias="0.5"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/todoItemsRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/todoNoteNameEditText"
        app:layout_constraintBottom_toTopOf="@id/newTodoItemEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_todo" />

    <EditText
        android:id="@+id/newTodoItemEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/add_new_item_hint"
        android:inputType="textCapSentences"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/addTodoItemButton"
        android:layout_marginEnd="8dp"/>

    <Button
        android:id="@+id/addTodoItemButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/newTodoItemEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>
